fix/produtc-tour: hide on mobile

--- a/core/src/style/index.scss
+++ b/core/src/style/index.scss
@@ -1,3 +1,12 @@
 @use '~@maltjoy/tokens/src/tokens';
 @use './skeletons';
 @use './slots';
+@use './utils';
+
+@media screen and (max-width: 767px) {
+  joy-product-tour,
+  joy-product-tour-spotlight,
+  .joy-product-tour--overlay {
+    display: none;
+  }
+}
